--- a/cv/cv.en.tex
+++ b/cv/cv.en.tex
@@ -32,15 +32,15 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2014--present}{PhD.}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Thesis topic: Multilanguage Collocations}
+\cventry{2014--2022}{PhD.}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Non-Autoregressive Neural Machine Translation}
 
 \cventry{2011--2014}{Master's Degree.}{Computational Linguistics, Charles University}{Prague}{}{}
 \cventry{2007--2011}{Bachelor's Degree.}{Computer Science, Charles University}{Prague}{}{}
 
-\section{Master Thesis}
-\cvitem{title}{\emph{Multilingual Collocation Database}}
-\cvitem{supervisor}{prof. RNDr. Jan Hajič, Dr.}
-\cvitem{description}{A database of Czech and English collocations created using statistical methods on large data collections}
+% \section{Master Thesis}
+% \cvitem{title}{\emph{Multilingual Collocation Database}}
+% \cvitem{supervisor}{prof. RNDr. Jan Hajič, Dr.}
+% \cvitem{description}{A database of Czech and English collocations created using statistical methods on large data collections}
 
 %\section{Research Interests}
 %\cvitem{}{Statistical NLP: Collocations, Machine Translation, Language Modeling}
