--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -48,9 +48,9 @@
 % \section{Diplomová práce}
 % \section{Master Thesis}
 
-% \cvitem{název}{\emph{Vícejazyčná databáze kolokací}}
-% \cvitem{vedoucí}{prof. RNDr. Jan Hajič, Dr.}
-% \cvitem{popis}{Databáze českých a anglických kolokací vytvořená aplikací statistických metod na velké kolekce dat.}
+% % \cvitem{název}{\emph{Vícejazyčná databáze kolokací}}
+% % \cvitem{vedoucí}{prof. RNDr. Jan Hajič, Dr.}
+% % \cvitem{popis}{Databáze českých a anglických kolokací vytvořená aplikací statistických metod na velké kolekce dat.}
 
 % \cvitem{name}{\emph{Multilingual Collocation Database}}
 % \cvitem{supervisor}{prof. RNDr. Jan Hajič, Dr.}
@@ -75,9 +75,8 @@
 % \cventry{2014--2015}{Expert datových analýz}{Technologická agentura České republiky (TAČR)}{Praha}{}{Práce na projektu zaměřená na shlukovou analýzu velkého množství dokumentů.}
 % \cventry{2011--2012}{PHP programátor}{Intya, s.r.o}{Prague}{}{Vývoj e-shopů a dalších webových stránek.}
 
-
 \cventry{2017--present}{Research Assistant}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Research on multimodal translation and improving neural MT with linguistic information.}
-\cventry{2020--2022}{Research Associate}{University of Edinburgh}{}{}{Research on low-resource and non-autoregressive neural MT}
+\cventry{2020--2022}{Research Associate}{University of Edinburgh}{Edinburgh}{}{Working on non-autoregressive neural machine translation and on machine translation under low-resource settings.}
 \cventry{2016}{Research Fellow}{Deutsche Forschungszentrum für Künstliche Intelligenz (DFKI)}{Berlin}{}{Five-month research fellowship; neural machine translation}
 \cventry{2012--2016}{Java/C++ Developer}{IBM Prague R\&D Lab}{Prague}{}{Student position}
 \cventry{2014--2015}{Data Analysis Expert}{Technological agency of the Czech Republic (TAČR)}{Prague}{}{Document-level clustering on large data collections.}
@@ -87,36 +86,72 @@
 % \section{Publikace}
 \section{Selected Bibliography}
 
-
-\cvitem{2022}{Barry Haddow, Rachel Bawden, Antonio Valerio Miceli Barone, Jindřich Helcl, Alexandra Birch: Survey of Low-Resource Machine Translation. In \emph{Computational Linguistics, Vol. 48}}
-
 \cvitem{2022}{Jindřich Helcl, Barry Haddow, Alexandra Birch: Non-Autoregressive
   Machine Translation: It's Not as Fast as it Seems. In \emph{Proceedings of
     the 2022 Conference of the North American Chapter of the Association for
     Computational Linguistics: Human Language Technologies (NAACL).}}
 
-\cvitem{2018}{Jindřich Libovický, Jindřich Helcl: End-to-End Non-Autoregressive Neural Machine Translation with Connectionist Temporal Classification.
-  In \emph{Proceedings of the Conference on Empirical Methods in Natural Language Processing EMNLP 2018}}
+\cvitem{2021}{Pinzen Chen, Jindřich Helcl, Ulrich Germann, Laurie Burchell,
+  Nikolay Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf, Alexandra
+  Birch, Kenneth Heafield: The University of Edinburgh’s English-German and
+  English-Hausa submissions to the WMT21 news translation task. In
+  \emph{Proceedings of the Sixth Conference on Machine Translation (WMT)}}.
 
-\cvitem{2018}{Jindřich Libovický, Jindřich Helcl, David Mareček: Input Combination Strategies for Multi-Source Transformer Decoder. In \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
+% \cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl, Ondřej Dušek:
+%   Expand and Filter: CUNI and LMU systems for the WNGT 2020 Duolingo shared
+%   task. In \emph{Proceedings of the Fourth Workshop on Natural Generation and
+%     Translation (WNGT).}}
 
-\cvitem{2018}{Jindřich Helcl, Jindřich Libovický, Dušan Variš: 	CUNI System for WMT18 Multimodal Tranlsation Task. In \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
+\cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl: Improving
+  Fluency of Non-Autoregressive Neural Machine Translation. Published online.}
 
-\cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich, Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine Translation. In \emph{Proceedings of the Second Conference on Machine Translation (WMT)}}
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl: End-to-End Non-Autoregressive
+  Neural Machine Translation with Connectionist Temporal Classification.  In
+  \emph{Proceedings of the Conference on Empirical Methods in Natural Language
+    Processing EMNLP 2018}}
 
-%\cvitem{2017}{Ondřej Bojar, Jindřich Helcl, Tom Kocmi, Jindřich Libovický, Tomáš Musil: Results of the WMT17 Neural MT Training Task. In \emph{Proceedings of the Second Conference on Machine Translation}}
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl, David Mareček: Input
+  Combination Strategies for Multi-Source Transformer Decoder. In
+  \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
 
-\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: CUNI System for the WMT17 Multimodal Translation Task. In \emph{Proceedings of the Second Conference on Machine Translation (WMT)}}
+% \cvitem{2018}{Jindřich Helcl, Jindřich Libovický, Dušan Variš: CUNI System for
+%   WMT18 Multimodal Tranlsation Task. In \emph{Proceedings of the Third
+%     Conference on Machine Translation (WMT)}}
 
-\cvitem{2017}{Jindřich Libovický, Jindřich Helcl: Attention Strategies for Multi-Source Sequence-to-Sequence Learning. In \emph{Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (ACL)}}
+\cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich,
+  Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine
+  Translation. In \emph{Proceedings of the Second Conference on Machine
+    Translation (WMT)}}
 
-\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: Neural Monkey: An Open-Source Toolkit for Sequence Learning. In \emph{The Prague Bulletin of Mathematical Linguistics}}
+% \cvitem{2017}{Ondřej Bojar, Jindřich Helcl, Tom Kocmi, Jindřich Libovický,
+%   Tomáš Musil: Results of the WMT17 Neural MT Training Task. In
+%   \emph{Proceedings of the Second Conference on Machine Translation}}
 
-%\cvitem{2016}{Eleftherios Avramidis, Vivien Macketanz, Aljoscha Burchardt, Jindřich Helcl, Hans Uszkoreit: Deeper Machine Translation and Evaluation for German. In \emph{Proceedings of the 2nd Deep Machine Translation Workshop}}
+\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: CUNI System for the WMT17
+  Multimodal Translation Task. In \emph{Proceedings of the Second Conference on
+    Machine Translation (WMT)}}
 
-%\cvitem{2016}{Ondřej Bojar, Ondřej Cífka, Jindřich Helcl, Tom Kocmi, Roman Sudarikov: UFAL Submissions to the IWSLT 2016 MT Track. In \emph{Proceedings of the ninth International Workshop on Spoken Language Translation (IWSLT)}}
+\cvitem{2017}{Jindřich Libovický, Jindřich Helcl: Attention Strategies for
+  Multi-Source Sequence-to-Sequence Learning. In \emph{Proceedings of the 55th
+    Annual Meeting of the Association for Computational Linguistics (ACL)}}
 
-\cvitem{2016}{Jindřich Libovický, Jindřich Helcl, Marek Tlustý, Pavel Pecina and Ondřej Bojar: CUNI System for WMT16 Automatic Post-Editing and Multimodal Translation Tasks. In \emph{Proceedings of the First Conference on Machine Translation (WMT)}}
+\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: Neural Monkey: An Open-Source
+  Toolkit for Sequence Learning. In \emph{The Prague Bulletin of Mathematical
+    Linguistics}}
+
+% \cvitem{2016}{Eleftherios Avramidis, Vivien Macketanz, Aljoscha Burchardt,
+%   Jindřich Helcl, Hans Uszkoreit: Deeper Machine Translation and Evaluation for
+%   German. In \emph{Proceedings of the 2nd Deep Machine Translation Workshop}}
+
+% \cvitem{2016}{Ondřej Bojar, Ondřej Cífka, Jindřich Helcl, Tom Kocmi, Roman
+%   Sudarikov: UFAL Submissions to the IWSLT 2016 MT Track. In \emph{Proceedings
+%     of the ninth International Workshop on Spoken Language Translation
+%     (IWSLT)}}
+
+\cvitem{2016}{Jindřich Libovický, Jindřich Helcl, Marek Tlustý, Pavel Pecina
+  and Ondřej Bojar: CUNI System for WMT16 Automatic Post-Editing and Multimodal
+  Translation Tasks. In \emph{Proceedings of the First Conference on Machine
+    Translation (WMT)}}
 
 % \section{Ocenění}
 \section{Awards}
