--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -18,13 +18,11 @@
 \title{Curriculum Vitae}
 \address{Pod Marjánkou 41}{169 00 Prague}{Czech Republic}% {Česká republika}
 \mobile{+420~602~551~727}
-%\phone{+2~(345)~678~901}
-%\fax{+3~(456)~789~012}
 \email{jindra.helcl@gmail.com}
 \homepage{ufal.mff.cuni.cz/jindrich-helcl}
 
 % \extrainfo{Datum narození: 9. února, 1988}
-% \extrainfo{Datum narození: 9. února, 1988}
+% \extrainfo{Date of birth: 9 February, 1988}
 
 \photo[64pt][0.4pt]{jindra.jpg}
 
@@ -37,7 +35,7 @@
 % \section{Vzdělání}
 \section{Education}
 
-% \cventry{2014--současnost}{PhD.}{Ústav formální a aplikované lingvistiky, Univerzita Karlova}{Praha}{}{Téma disertace: Využití externí informace v neuronovém strojovém překladu}
+% \cventry{2014--současnost}{PhD.}{Ústav formální a aplikované lingvistiky, Univerzita Karlova}{Praha}{}{Téma disertace: Neautoregresivní neuronový strojový překlad}
 % \cventry{2011--2014}{Mgr.}{Matematická lingvistika, Univerzita Karlova}{Praha}{}{}
 % \cventry{2007--2011}{Bc.}{Informatika, Univerzita Karlova}{Praha}{}{}
 
@@ -45,20 +43,10 @@
 \cventry{2011--2014}{Mgr.}{Computational Linguistics, Charles University}{Prague}{}{}
 \cventry{2007--2011}{Bc.}{Computer Science, Charles University}{Prague}{}{}
 
-% \section{Diplomová práce}
-% \section{Master Thesis}
-
-% % \cvitem{název}{\emph{Vícejazyčná databáze kolokací}}
-% % \cvitem{vedoucí}{prof. RNDr. Jan Hajič, Dr.}
-% % \cvitem{popis}{Databáze českých a anglických kolokací vytvořená aplikací statistických metod na velké kolekce dat.}
-
-% \cvitem{name}{\emph{Multilingual Collocation Database}}
-% \cvitem{supervisor}{prof. RNDr. Jan Hajič, Dr.}
-% \cvitem{description}{A database of Czech and English collocation retrieved from big data collections using statistical methods.}
-
 % \section{Stáže a výzkumné pobyty}
 \section{Research Internships}
 
+% \cventry{2019}{Microsoft}{}{}{}{Čtyřměsíční výzkumná stáž; neautoregresivní modely pro neuronový strojový překlad}
 % \cventry{2017--2018}{Google Inc.}{}{}{}{Čtyřměsíční výzkumná stáž; deep learning v NLP}
 % \cventry{2016--2017}{University of Edinburgh}{}{}{}{Čtyřměsíční studijní pobyt; neuronový strojový překlad}
 
@@ -91,16 +79,15 @@
     the 2022 Conference of the North American Chapter of the Association for
     Computational Linguistics: Human Language Technologies (NAACL).}}
 
+\cvitem{2022}{Barry Haddow, Rachel Bawden, Antonio Valerio Miceli Barone,
+  Jindřich Helcl, Alexandra Birch: Survey of Low-Resource Machine
+  Translation. In \emph{Computational Linguistics, Vol. 48, No. 3}}
+
 \cvitem{2021}{Pinzen Chen, Jindřich Helcl, Ulrich Germann, Laurie Burchell,
   Nikolay Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf, Alexandra
   Birch, Kenneth Heafield: The University of Edinburgh’s English-German and
   English-Hausa submissions to the WMT21 news translation task. In
   \emph{Proceedings of the Sixth Conference on Machine Translation (WMT)}}.
-
-% \cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl, Ondřej Dušek:
-%   Expand and Filter: CUNI and LMU systems for the WNGT 2020 Duolingo shared
-%   task. In \emph{Proceedings of the Fourth Workshop on Natural Generation and
-%     Translation (WNGT).}}
 
 \cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl: Improving
   Fluency of Non-Autoregressive Neural Machine Translation. Published online.}
@@ -114,18 +101,10 @@
   Combination Strategies for Multi-Source Transformer Decoder. In
   \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
 
-% \cvitem{2018}{Jindřich Helcl, Jindřich Libovický, Dušan Variš: CUNI System for
-%   WMT18 Multimodal Tranlsation Task. In \emph{Proceedings of the Third
-%     Conference on Machine Translation (WMT)}}
-
 \cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich,
   Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine
   Translation. In \emph{Proceedings of the Second Conference on Machine
     Translation (WMT)}}
-
-% \cvitem{2017}{Ondřej Bojar, Jindřich Helcl, Tom Kocmi, Jindřich Libovický,
-%   Tomáš Musil: Results of the WMT17 Neural MT Training Task. In
-%   \emph{Proceedings of the Second Conference on Machine Translation}}
 
 \cvitem{2017}{Jindřich Helcl, Jindřich Libovický: CUNI System for the WMT17
   Multimodal Translation Task. In \emph{Proceedings of the Second Conference on
@@ -139,15 +118,6 @@
   Toolkit for Sequence Learning. In \emph{The Prague Bulletin of Mathematical
     Linguistics}}
 
-% \cvitem{2016}{Eleftherios Avramidis, Vivien Macketanz, Aljoscha Burchardt,
-%   Jindřich Helcl, Hans Uszkoreit: Deeper Machine Translation and Evaluation for
-%   German. In \emph{Proceedings of the 2nd Deep Machine Translation Workshop}}
-
-% \cvitem{2016}{Ondřej Bojar, Ondřej Cífka, Jindřich Helcl, Tom Kocmi, Roman
-%   Sudarikov: UFAL Submissions to the IWSLT 2016 MT Track. In \emph{Proceedings
-%     of the ninth International Workshop on Spoken Language Translation
-%     (IWSLT)}}
-
 \cvitem{2016}{Jindřich Libovický, Jindřich Helcl, Marek Tlustý, Pavel Pecina
   and Ondřej Bojar: CUNI System for WMT16 Automatic Post-Editing and Multimodal
   Translation Tasks. In \emph{Proceedings of the First Conference on Machine
@@ -156,7 +126,14 @@
 % \section{Ocenění}
 \section{Awards}
 
-\cventry{2017}{Outstanding paper}{for paper ``Attention Strategies for Multi-Source Sequence-to-Sequence Learning'' on the ACL 2017 conference}{Vancouver}{}{}
+\cventry{2022}{Steven Krauwer Award}{}{awarded at the CLARIN Annual Conference to
+  the ÚFAL for Ukraine team for the Czech--Ukrainian translation tool built in
+  response to the Russian invasion to Ukraine in 2022 and the subsequent
+  refugee crisis in the Czech Republic}{Prague}{}
+
+\cventry{2017}{Outstanding paper}{}{for paper ``Attention Strategies for
+  Multi-Source Sequence-to-Sequence Learning'' on the ACL 2017
+  conference}{Vancouver}{}
 
 % \section{Computer Skills}
 % \section{Počítačové dovednosti}
