things for eamt

--- a/thesis/eamt-award/main.tex
+++ b/thesis/eamt-award/main.tex
@@ -97,6 +97,6 @@ said in NAR literature to already have happened.
 This submission to the EAMT Best Thesis Award is structured as follows. After
 this overview, we include a copy of the author's CV with list of publications
 relevant to the thesis, followed by the copy of the thesis itself. At the end,
-we attach reviews by the thesis supervisor and the two reviewers.
+we attach reviews by two reviewers.
 
 \end{document}
