update cv with scholar link and opustrainer paper

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -12,6 +12,11 @@
 %% Adjust the page margins
 \usepackage[scale=0.75]{geometry}
 
+%% add google scholar stuff
+% \newcommand*{\scholarsocialsymbol}{\includegraphics[height=.7\baselineskip]{google-scholar}}
+% \collectionadd[scholar]{socials}{\href{https://scholar.google.com/citations?user=YkypSXgAAAAJ}{https://scholar.google.com/citations?user=YkypSXgAAAAJ}}
+
+
 %% Personal data
 \firstname{Jindřich}
 \familyname{Helcl}
@@ -20,6 +25,7 @@
 \mobile{+420~602~551~727}
 \email{jindra.helcl@gmail.com}
 \homepage{ufal.mff.cuni.cz/jindrich-helcl}
+
 
 % \extrainfo{Datum narození: 9. února, 1988}
 % \extrainfo{Date of birth: 9 February, 1988}
@@ -73,6 +79,13 @@
 
 % \section{Publikace}
 \section{Selected Bibliography}
+\cvline{}{See \url{https://scholar.google.cz/citations?user=YkypSXgAAAAJ} for full list}
+
+\cvitem{2023}{Nikolay Bogoychev, Jelmer van der Linde, Graeme Nail, Barry
+  Haddow, Jaume Zaragoza-Bernabeu, Gema Ramírez-Sánchez, Lukas Weymann, Tudor
+  Nicolae Mateiu, Jindřich Helcl, Mikko Aulamo: OpusCleaner and OpusTrainer,
+  open source toolkits for training Machine Translation and Large language
+  models. \emph{arXiv preprint: 2311.14838.}}
 
 \cvitem{2022}{Jindřich Helcl, Barry Haddow, Alexandra Birch: Non-Autoregressive
   Machine Translation: It's Not as Fast as it Seems. In \emph{Proceedings of
