update for primus

--- a/thesis/primus/list_standalone.tex
+++ b/thesis/primus/list_standalone.tex
@@ -77,8 +77,24 @@
 \bibliographystyle{csplainnat}
 \nobibliography{anthology,references}
 
-% citace pocitany 9.11.2021
 
+\noindent \bibentry{bogoychev2023opuscleaner}
+\vspace{4mm}
+
+\noindent \bibentry{helcl-libovicky-2023-cuni}
+\vspace{4mm}
+
+\noindent \bibentry{helcl-2022-cuni}
+\vspace{4mm}
+
+\noindent \bibentry{popel-etal-2022-cuni}
+\vspace{4mm}
+
+\noindent \bibentry{haddow-etal-2022-survey}
+\vspace{4mm}
+
+\noindent \bibentry{helcl-etal-2022-non}
+\vspace{4mm}
 
 \noindent \bibentry{chen-etal-2021-university}
 \vspace{4mm}
