--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -49,6 +49,23 @@
 \cventry{2011--2014}{Mgr.}{Computational Linguistics, Charles University}{Prague}{}{}
 \cventry{2007--2011}{Bc.}{Computer Science, Charles University}{Prague}{}{}
 
+% \section{Pracovní zkušenosti}
+\section{Work Experience}
+
+% \cventry{2017--současnost}{Výzkumný pracovník}{Ústav formální a aplikované lingvistiky, Univerzita Karlova}{Praha}{}{Výzkum zaměřen na multimodální překlad a využití lingvistické informace v neuronovém strojovém překladu.}
+% \cventry{2016}{Výzkumný pracovník}{Deutsche Forschungszentrum für Künstliche Intelligenz (DFKI)}{Berlín}{}{Pětiměsíční výzkumná pozice; Neuronový strojový překlad}
+% \cventry{2012--2016}{Java/C++ Developer}{IBM Praha R\&D Lab}{Praha}{}{Studentská pozice}
+% \cventry{2014--2015}{Expert datových analýz}{Technologická agentura České republiky (TAČR)}{Praha}{}{Práce na projektu zaměřená na shlukovou analýzu velkého množství dokumentů.}
+% \cventry{2011--2012}{PHP programátor}{Intya, s.r.o}{Prague}{}{Vývoj e-shopů a dalších webových stránek.}
+
+\cventry{2017--present}{Research Assistant}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Multimodal MT, non-autoregressive decoding, lexically grounded tokenization.}
+\cventry{2020--2022}{Research Associate}{University of Edinburgh}{Edinburgh}{}{Working on non-autoregressive neural machine translation and on machine translation under low-resource settings.}
+\cventry{2016}{Research Fellow}{Deutsche Forschungszentrum für Künstliche Intelligenz (DFKI)}{Berlin}{}{Five-month research fellowship; neural machine translation}
+\cventry{2012--2016}{Java/C++ Developer}{IBM Prague R\&D Lab}{Prague}{}{Student position}
+\cventry{2014--2015}{Data Analysis Expert}{Technological agency of the Czech Republic (TAČR)}{Prague}{}{Document-level clustering on large data collections.}
+\cventry{2011--2012}{PHP developer}{Intya, s.r.o}{Prague}{}{Development of e-shop applications and other web pages.}
+
+
 % \section{Stáže a výzkumné pobyty}
 \section{Research Internships}
 
@@ -60,81 +77,7 @@
 \cventry{2017--2018}{Google}{}{}{}{Four-month research internship; deep learning for NLP}
 \cventry{2016--2017}{University of Edinburgh}{}{}{}{Four-month research internship; neural machine translation}
 
-% \section{Pracovní zkušenosti}
-\section{Work Experience}
 
-% \cventry{2017--současnost}{Výzkumný pracovník}{Ústav formální a aplikované lingvistiky, Univerzita Karlova}{Praha}{}{Výzkum zaměřen na multimodální překlad a využití lingvistické informace v neuronovém strojovém překladu.}
-% \cventry{2016}{Výzkumný pracovník}{Deutsche Forschungszentrum für Künstliche Intelligenz (DFKI)}{Berlín}{}{Pětiměsíční výzkumná pozice; Neuronový strojový překlad}
-% \cventry{2012--2016}{Java/C++ Developer}{IBM Praha R\&D Lab}{Praha}{}{Studentská pozice}
-% \cventry{2014--2015}{Expert datových analýz}{Technologická agentura České republiky (TAČR)}{Praha}{}{Práce na projektu zaměřená na shlukovou analýzu velkého množství dokumentů.}
-% \cventry{2011--2012}{PHP programátor}{Intya, s.r.o}{Prague}{}{Vývoj e-shopů a dalších webových stránek.}
-
-\cventry{2017--present}{Research Assistant}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Research on multimodal translation and improving neural MT with linguistic information.}
-\cventry{2020--2022}{Research Associate}{University of Edinburgh}{Edinburgh}{}{Working on non-autoregressive neural machine translation and on machine translation under low-resource settings.}
-\cventry{2016}{Research Fellow}{Deutsche Forschungszentrum für Künstliche Intelligenz (DFKI)}{Berlin}{}{Five-month research fellowship; neural machine translation}
-\cventry{2012--2016}{Java/C++ Developer}{IBM Prague R\&D Lab}{Prague}{}{Student position}
-\cventry{2014--2015}{Data Analysis Expert}{Technological agency of the Czech Republic (TAČR)}{Prague}{}{Document-level clustering on large data collections.}
-\cventry{2011--2012}{PHP developer}{Intya, s.r.o}{Prague}{}{Development of e-shop applications and other web pages.}
-
-
-% \section{Publikace}
-\section{Selected Bibliography}
-\cvline{}{See \url{https://scholar.google.cz/citations?user=YkypSXgAAAAJ} for full list}
-
-\cvitem{2023}{Nikolay Bogoychev, Jelmer van der Linde, Graeme Nail, Barry
-  Haddow, Jaume Zaragoza-Bernabeu, Gema Ramírez-Sánchez, Lukas Weymann, Tudor
-  Nicolae Mateiu, Jindřich Helcl, Mikko Aulamo: OpusCleaner and OpusTrainer,
-  open source toolkits for training Machine Translation and Large language
-  models. \emph{arXiv preprint: 2311.14838.}}
-
-\cvitem{2022}{Jindřich Helcl, Barry Haddow, Alexandra Birch: Non-Autoregressive
-  Machine Translation: It's Not as Fast as it Seems. In \emph{Proceedings of
-    the 2022 Conference of the North American Chapter of the Association for
-    Computational Linguistics: Human Language Technologies (NAACL).}}
-
-\cvitem{2022}{Barry Haddow, Rachel Bawden, Antonio Valerio Miceli Barone,
-  Jindřich Helcl, Alexandra Birch: Survey of Low-Resource Machine
-  Translation. In \emph{Computational Linguistics, Vol. 48, No. 3}}
-
-\cvitem{2021}{Pinzen Chen, Jindřich Helcl, Ulrich Germann, Laurie Burchell,
-  Nikolay Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf, Alexandra
-  Birch, Kenneth Heafield: The University of Edinburgh’s English-German and
-  English-Hausa submissions to the WMT21 news translation task. In
-  \emph{Proceedings of the Sixth Conference on Machine Translation (WMT)}}.
-
-\cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl: Improving
-  Fluency of Non-Autoregressive Neural Machine Translation. Published online.}
-
-\cvitem{2018}{Jindřich Libovický, Jindřich Helcl: End-to-End Non-Autoregressive
-  Neural Machine Translation with Connectionist Temporal Classification.  In
-  \emph{Proceedings of the Conference on Empirical Methods in Natural Language
-    Processing EMNLP 2018}}
-
-\cvitem{2018}{Jindřich Libovický, Jindřich Helcl, David Mareček: Input
-  Combination Strategies for Multi-Source Transformer Decoder. In
-  \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
-
-\cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich,
-  Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine
-  Translation. In \emph{Proceedings of the Second Conference on Machine
-    Translation (WMT)}}
-
-\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: CUNI System for the WMT17
-  Multimodal Translation Task. In \emph{Proceedings of the Second Conference on
-    Machine Translation (WMT)}}
-
-\cvitem{2017}{Jindřich Libovický, Jindřich Helcl: Attention Strategies for
-  Multi-Source Sequence-to-Sequence Learning. In \emph{Proceedings of the 55th
-    Annual Meeting of the Association for Computational Linguistics (ACL)}}
-
-\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: Neural Monkey: An Open-Source
-  Toolkit for Sequence Learning. In \emph{The Prague Bulletin of Mathematical
-    Linguistics}}
-
-\cvitem{2016}{Jindřich Libovický, Jindřich Helcl, Marek Tlustý, Pavel Pecina
-  and Ondřej Bojar: CUNI System for WMT16 Automatic Post-Editing and Multimodal
-  Translation Tasks. In \emph{Proceedings of the First Conference on Machine
-    Translation (WMT)}}
 
 % \section{Ocenění}
 \section{Awards}
@@ -147,6 +90,94 @@
 \cventry{2017}{Outstanding paper}{}{for paper ``Attention Strategies for
   Multi-Source Sequence-to-Sequence Learning'' on the ACL 2017
   conference}{Vancouver}{}
+
+
+\newpage
+
+\section{Academic Community Service}
+
+\cvitem{2022, 2024}{Main organizer of the \emph{MT Marathon} in Prague, Czech Republic}
+
+\cvitem{2017--present}{Rewieving for \emph{ARR (*CL, EMNLP), COLING, LREC}}
+
+\cvitem{2017}{Co-organizer of the \emph{WMT17 Neural MT Training Task}} 
+
+\cvitem{2017}{Presented the Neural Machine Translation tutorial at \emph{RANLP 2017} in Varna, Bulgaria}
+
+% \section{Publikace}
+\section{Selected Bibliography}
+\cvline{}{\small See \url{https://scholar.google.cz/citations?user=YkypSXgAAAAJ} for full list}
+
+\subsection{\textbf{CORE A/A* ranked venues and impacted journals}}
+
+\cvitem{2024}{Jindřich Libovický, Jindřich Helcl: Lexically Grounded Subword
+  Segmentation. In \emph{Proceedings of the 2024 Conference on Empirical 
+  Methods in Natural Language Processing (EMNLP)}}
+
+\cvitem{2022}{Jindřich Helcl, Barry Haddow, Alexandra Birch: Non-Autoregressive
+  Machine Translation: It's Not as Fast as it Seems. In \emph{Proceedings of
+  the 2022 Conference of the North American Chapter of the Association for
+  Computational Linguistics: Human Language Technologies (NAACL).}}
+
+\cvitem{2022}{Barry Haddow, Rachel Bawden, Antonio Valerio Miceli Barone,
+  Jindřich Helcl, Alexandra Birch: Survey of Low-Resource Machine
+  Translation. In \emph{Computational Linguistics, Vol. 48, No. 3}}
+
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl: End-to-End Non-Autoregressive
+  Neural Machine Translation with Connectionist Temporal Classification.  In
+  \emph{Proceedings of the 2018 Conference on Empirical Methods in Natural Language
+  Processing (EMNLP)}}
+
+\cvitem{2017}{Jindřich Libovický, Jindřich Helcl: Attention Strategies for
+  Multi-Source Sequence-to-Sequence Learning. In \emph{Proceedings of the 55th
+  Annual Meeting of the Association for Computational Linguistics (ACL)}}
+
+
+\subsection{\textbf{Other peer-reviewed venues}}
+
+\cvitem{2023}{Jindřich Helcl, Zdeněk Kasner, Ondřej Dušek, Tomasz Limisiewicz, 
+  Dominik Macháček, Tomáš Musil, Jindřich Libovický: Teaching LLMs at Charles
+  University: Assignments and Activities. In \emph{Proceedings of the Sixth
+   Workshop on Teaching NLP (TeachNLP)}}
+
+\cvitem{2021}{Pinzen Chen, Jindřich Helcl, Ulrich Germann, Laurie Burchell,
+  Nikolay Bogoychev, Antonio Valerio Miceli Barone, Jonas Waldendorf, Alexandra
+  Birch, Kenneth Heafield: The University of Edinburgh’s English-German and
+  English-Hausa submissions to the WMT21 news translation task. In
+  \emph{Proceedings of the Sixth Conference on Machine Translation (WMT)}}
+
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl, David Mareček: Input
+  Combination Strategies for Multi-Source Transformer Decoder. In
+  \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
+
+\cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich,
+  Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine
+  Translation. In \emph{Proceedings of the Second Conference on Machine
+  Translation (WMT)}}
+
+\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: CUNI System for the WMT17
+  Multimodal Translation Task. In \emph{Proceedings of the Second Conference on
+  Machine Translation (WMT)}}
+
+\cvitem{2017}{Jindřich Helcl, Jindřich Libovický: Neural Monkey: An Open-Source
+Toolkit for Sequence Learning. In \emph{The Prague Bulletin of Mathematical
+Linguistics}}
+
+\cvitem{2016}{Jindřich Libovický, Jindřich Helcl, Marek Tlustý, Pavel Pecina
+  and Ondřej Bojar: CUNI System for WMT16 Automatic Post-Editing and Multimodal
+  Translation Tasks. In \emph{Proceedings of the First Conference on Machine
+  Translation (WMT)}}
+
+% \subsection{\textbf{Preprints}}
+
+% \cvitem{2023}{Nikolay Bogoychev, Jelmer van der Linde, Graeme Nail, Barry
+%   Haddow, Jaume Zaragoza-Bernabeu, Gema Ramírez-Sánchez, Lukas Weymann, Tudor
+%   Nicolae Mateiu, Jindřich Helcl, Mikko Aulamo: OpusCleaner and OpusTrainer,
+%   open source toolkits for training Machine Translation and Large language
+%   models. \url{https://arxiv.org/abs/2311.14838}}
+
+% \cvitem{2020}{Zdeněk Kasner, Jindřich Libovický, Jindřich Helcl: Improving
+%   Fluency of Non-Autoregressive Neural Machine Translation. \url{https://arxiv.org/abs/2004.03227}}
 
 % \section{Computer Skills}
 % \section{Počítačové dovednosti}
