cv mushroom update

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -98,9 +98,11 @@
 
 \cvitem{2022, 2024}{Main organizer of the \emph{MT Marathon} in Prague, Czech Republic}
 
+\cvitem{2024}{Co-organizer of the \emph{Mu-SHROOM SemEval-2025 Task 3}}
+
 \cvitem{2017--present}{Rewieving for \emph{ARR (*CL, EMNLP), COLING, LREC}}
 
-\cvitem{2017}{Co-organizer of the \emph{WMT17 Neural MT Training Task}} 
+\cvitem{2017}{Co-organizer of the \emph{WMT17 Neural MT Training Task}}
 
 \cvitem{2017}{Presented the Neural Machine Translation tutorial at \emph{RANLP 2017} in Varna, Bulgaria}
 
@@ -111,7 +113,7 @@
 \subsection{\textbf{CORE A/A* ranked venues and impacted journals}}
 
 \cvitem{2024}{Jindřich Libovický, Jindřich Helcl: Lexically Grounded Subword
-  Segmentation. In \emph{Proceedings of the 2024 Conference on Empirical 
+  Segmentation. In \emph{Proceedings of the 2024 Conference on Empirical
   Methods in Natural Language Processing (EMNLP)}}
 
 \cvitem{2022}{Jindřich Helcl, Barry Haddow, Alexandra Birch: Non-Autoregressive
@@ -135,7 +137,7 @@
 
 \subsection{\textbf{Other peer-reviewed venues}}
 
-\cvitem{2023}{Jindřich Helcl, Zdeněk Kasner, Ondřej Dušek, Tomasz Limisiewicz, 
+\cvitem{2023}{Jindřich Helcl, Zdeněk Kasner, Ondřej Dušek, Tomasz Limisiewicz,
   Dominik Macháček, Tomáš Musil, Jindřich Libovický: Teaching LLMs at Charles
   University: Assignments and Activities. In \emph{Proceedings of the Sixth
    Workshop on Teaching NLP (TeachNLP)}}
